--- a/Address_Design/Address_Design.csproj
+++ b/Address_Design/Address_Design.csproj
@@ -9,5 +9,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Views\AddressForm\" />
+  </ItemGroup>
+
 
 </Project>
