Addred AddressForms API backbone

--- a/Address_Design/appsettings.json
+++ b/Address_Design/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Address_DesignContext": "Server=(localdb)\\mssqllocaldb;Database=Address_DesignContext-d69a6b4e-d508-4a16-af1d-4954c263b201;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
