--- a/Address_Design/Address_Design.csproj
+++ b/Address_Design/Address_Design.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EmbeddedResourceVirtualPathProvider" Version="1.3.51" />
+    <PackageReference Include="FormFactory" Version="5.0.77" />
+    <PackageReference Include="FormFactory.AspMvc" Version="5.0.77" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.12">
@@ -14,6 +17,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\FormFactory\" />
   </ItemGroup>
 
 
