Removing some stuff, not going to use Razor Components

--- a/Address_Design/Address_Design.csproj
+++ b/Address_Design/Address_Design.csproj
@@ -19,5 +19,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\" />
+  </ItemGroup>
+
 
 </Project>
