--- a/Address_Design/Address_Design.csproj
+++ b/Address_Design/Address_Design.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="EmbeddedResourceVirtualPathProvider" Version="1.3.51" />
     <PackageReference Include="FormFactory" Version="5.0.77" />
+    <PackageReference Include="IKVM" Version="8.1.5717" />
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.12" />
